# mini-based

./: .env.example  .gitignore  Cargo.toml  README.md
L1/: Cargo.toml
L1/src/: main.rs
L1/src/sol/: Inbox.sol
L2/: Cargo.toml
L2/src/: block_builder.rs  main.rs  vm.rs
contracts/: Cargo.toml
contracts/src/: lib.rs  main.rs
contracts/src/sol/: Inbox.sol
node/: Cargo.toml  mempool.json
node/src/: block_builder.rs  main.rs  mempool.rs  monitor.rs
prover/: Cargo.toml
prover/src/: main.rs  monitor.rs  prover.rs
sequencer/: Cargo.toml
sequencer/src/: main.rs
