[package]
name = "mini-taiko"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "sequencer",
  "prover",
  "L2",
  "L1"
]
resolver = "2" 

[workspace.dependencies]
alloy = { version = "0.11", features = ["full", "getrandom", "node-bindings"] }
alloy-rlp = "0.3.11"
eyre = "0.6.12"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "signal"] }
dotenv = "0.15.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
hex = "0.4"
revm = "19.5.0"